[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/hack_big/Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/theme/ReportTheme.tres" type="Theme" id=3]
[ext_resource path="res://report/ReportGui.gd" type="Script" id=4]

[node name="CalculatorReport" type="VBoxContainer"]
margin_right = 62.0
margin_bottom = 24.0
rect_min_size = Vector2( 600, 0 )
theme = ExtResource( 3 )
custom_constants/separation = 10
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
questions = [ "WhatIsEqual", "WhatIsClear", "WhatIsZero", "WhatIsAdd", "WhatIsSub", "WhatIsMul", "WhatIsDiv", "WhatIsOne", "WhatIsTern", "WhatIs5", "WhatIs116", "WhatIs-58" ]

[node name="Label" type="Label" parent="."]
margin_right = 600.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Report
"
align = 1

[node name="CheckAnswerTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="CheckAnswerTimer" to="." method="_on_CheckAnswerTimer_timeout"]
