[gd_scene load_steps=4 format=2]

[ext_resource path="res://report/questions/WhatIsAdd.tscn" type="PackedScene" id=1]
[ext_resource path="res://report/ReportGui.gd" type="Script" id=2]
[ext_resource path="res://report/questions/WhatIsSub.tscn" type="PackedScene" id=3]

[node name="ReportGui" type="VBoxContainer"]
margin_right = 62.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhatIsAdd" parent="." instance=ExtResource( 1 )]
margin_right = 300.0

[node name="WhatIsSub" parent="." instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 52.0
